feat: incluído Dockerfile básico y nginx.conf básico para arrancar un servidor web HTTP fix: movidas las webs a la carpeta web y cambiados los nombres y algunos enlaces internos para facilitar su integración en NGINX wip: README.md

--- a/web/hardware.html
+++ b/web/hardware.html
@@ -5,8 +5,8 @@
     </head>
     <body>
         <nav> 
-            <a href="Home.html">Home</a>
-            <a href="Hardware.html">Hardware</a>
+            <a href="index.html">Home</a>
+            <a href="hardware.html">Hardware</a>
             <a href="#">Blog</a>
             <a href="#">Portefolio</a>
             <a href="#">Contact</a>
